The code compiles, but at the cost of commenting it out in a few places. Replaced all uses of the deprecated tactic omega with lia. Got rid of some warnings due to commands like Focus or Let.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1135,7 +1135,7 @@ Most of what we've been doing lately was pretty boring. Given the cleanest defin
     \item To derive the recursive equation, use the target function's definition. Prove it with functional induction.
 \end{itemize}
 
-Test test dżony test asdss du du du dupa
+Test test dżony test asdss du du du dupa asd
 
 \subsection{E pluribus unum}
 
