Rewritten two paragraphs on the definition of permutations.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -537,9 +537,9 @@ This one is admittedly quite murky. What is meant by ``aspect'' here? The best w
 ]
 {Coq}{Snippets/Chapter2/JustRight.v}
 
-Such an idea is \textit{counting decidable properties}: two lists are permutations of one another just when, for all decidable properties \m{p}, they have the same number of elements satisfying \m{p}.\footnote{The proof of equivalence of these two definitions of \m{Permutation} can be found in the thesis' repository. I won't give a precise location here, because it's likely to be out of date soon.} This definition may seem surprising at first, but it can be derived from the one we started with: instead of rearranging elements in a list, we can just as well count the number of occurrences of every element. If we get the same result for all \m{x\ :\ A}, then the two lists are permutations -- we don't need to worry about moving the elements around.
+Such an idea is \textit{counting}: two lists are permutations of one another when they contain the same number of occurrences of each \m{x\ :\ A}\footnote{The proof of equivalence of these two definitions of \m{Permutation} can be found in the thesis' repository. I won't give a precise location here, because it's likely to be out of date soon.} Note that, because we count elements, this new definition only applies to types that have decidable equality. This restriction is not a big problem in practice, because the need to sort functions, streams, or other such infinite objects lacking decidable equality, is pretty rare.
 
-The definition we get as a result is not abstract enough, because not all types support decidable equality, so the the last step is to generalize from counting occurrences of elements to counting elements satisfying a general decidable property. This is what was meant by ``changing the focus from one aspect to another''. 
+But the resulting definition by counting is \textit{not abstract enough}, because it \textit{assumes what is not needed}: to use this definition for lists that contain elements of type \m{A}, we need to prove that \m{A} has decidable equality. We can improve the definition with one last step of abstraction, by generalizing from counting occurrences of elements to counting the number of elements satisfying a general decidable property \m{p\ :\ A -> bool}. This definition is clearly equivalent, but we don't need to prove anything to use it.
 
 \inputminted
 [
